# ppc_agents

./: .env  .gitignore  config.py  gradio_ui.py  main.py  pyproject.toml  requirements.txt
agents/: budget_agent.py  campaign_agent.py  keyword_agent.py  search_term_agent.py
api/routes/: analysis.py
core/: gemini.py
models/: base.py
services/: google_ads.py
